--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,13 +25,71 @@ nav {
     height: 10vh;
 }
 
-#logo {
-    position: relative;
-    bottom: -20px;
-    left: 100px;
-    transform: rotate(-10deg);
-    z-index: 3;
+#logoSvg {
+    width: 1200px;
+    height: 800px;
+    font-size: 100%;
+    text-shadow: 0px 0px 1px black, -1px 1px 1px gray, -0.5px 0.5px 3px black;
+    font-weight: 900;
+    font-style: italic;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
+
+#circles {
+    transform: translate(12.5%);
+}
+
+#ship {
+    transform: translate(-4.5%, 3%) rotate(-12deg);
+}
+
+#leftWing {
+    transform: skewX(50deg) translate(-7.5%, 0%);
+}
+
+#rightWing {
+    transform: skewX(-50deg) translate(11.5%, 0%);
+}
+
+#speed1 {
+    z-index: 4;
+    opacity: 0;
+    animation: speed 4.1s infinite ease-in-out;
+}
+
+#speed2 {
+    z-index: 4;
+    opacity: 0;
+    animation: speed 4.3s 1s infinite ease-in-out;
+}
+
+#speed3 {
+    z-index: 4;
+    opacity: 0;
+    animation: speed 4.5s 1.5s infinite ease-in-out;
+}
+
+
+@keyframes speed {
+    20% {
+        opacity: 1;
+        /* left: 40px; */
+    }
+
+    80% {
+        opacity: .2;
+        left: 0px;
+        top: 14px
+    }
+
+    100% {
+        left: 0px;
+        top: 14px
+    }
+}
+
 
 #asteroid {
     width: 50px;
@@ -127,7 +185,7 @@ nav {
     }
 }
 
-#links a,#links button {
+#links a, #links button {
     position: relative;
     z-index: 3;
     background: black;
@@ -136,11 +194,11 @@ nav {
     border-left: none;
     color: teal;
     margin: 0 20px;
-    border-radius: 8px;
+    border-radius: 5px;
     font-size: 1.4vmax;
     text-decoration: none;
     font-family: sans-serif;
-    border-bottom: 7px solid rgb(124, 38, 38);
+    border-bottom: 5px solid #7d2626;
 }
 
 #links a:hover, #links button:hover {
@@ -148,15 +206,14 @@ nav {
 }
 
 #title {
-    margin: 210px auto 2vh auto;
+    margin: 190px auto 0 auto;
     display: flex;
     justify-content: space-around;
-    width: 90%;
+    width: 95%;
     max-width: 2000px;
     border-radius: 25px;
     border: 1px solid teal;
     background: linear-gradient(215deg, black 48%, teal 60%);
-    /* height: 10vh; */
 }
 
 #title h1 {
@@ -200,8 +257,12 @@ main {
     position: relative;
     z-index: 2;
     margin: 35px auto;
-    overflow: hidden;
-    height: 47vh;
+    overflow: auto;
+    height: 55vh;
+}
+
+main::-webkit-scrollbar {
+    display: none;
 }
 
 #carousel {
@@ -214,6 +275,7 @@ main {
 
 #carousel img {
     width: 100%;
+    height: 100%;
     margin: auto;
     overflow: hidden;
 }
@@ -225,7 +287,7 @@ main {
     border-radius: 25px;
     font-family: Arial, Helvetica, sans-serif;
     background: black;
-    width: 25%;
+    width: 20%;
     padding: 5px;
     overflow: hidden;
 }
@@ -274,7 +336,6 @@ main {
 }
 
 .type {
-    text-align: center;
     color: white;
 }
 
@@ -282,7 +343,20 @@ main {
     color: white;
     width: 95%;
     margin: 0 auto;
+}
 
+.type a {
+    margin: 10px auto;
+    text-align: center;
+    display: block;
+}
+
+.type button {
+    background: teal;
+    color: white;
+    padding: 5px;
+    border-radius: 8px;
+    font-size: 1rem;
 }
 
 #text {
@@ -290,9 +364,8 @@ main {
 }
 
 #offersDiv {
-    height: 40vh;
     text-align: center;
-    width: 22%;
+    width: 30%;
     padding: 2%;
     border-radius: 25px;
     background: black;
@@ -304,12 +377,19 @@ main {
     align-content: space-evenly;
 }
 
-#class35, #class65, #class300, #class500 {
+#class35, #class65, #class300, #class550, #class1000 {
     display: flex;
     text-align: center;
     font-size: 3vh;
     font-weight: 600;
-    width: 21%;
+}
+
+#class35, #class65, #class300, #class550, #class1000 {
+    display: flex;
+    text-align: center;
+    font-size: 3vh;
+    font-weight: 600;
+    width: 18%;
     align-items: center;
     height: 10%;
     border-radius: 12px;
@@ -345,6 +425,11 @@ table {
     width: 100%;
 }
 
+tr>th {
+    width: 25%;
+    text-align-last: left;
+}
+
 tr>td {
     width: 18%;
     font-size: 100%;
@@ -352,7 +437,7 @@ tr>td {
 }
 
 .class35 {
-    accent-color: #7e2832;
+    accent-color: white;
 }
 
 .class65 {
@@ -364,7 +449,12 @@ tr>td {
     accent-color: #0277bd;
 }
 
-.class500 {
+.class550 {
+    accent-color: #dc5e00;
+}
+
+
+.class1000 {
     accent-color: #5c0035;
 }
 
@@ -388,24 +478,34 @@ tr>td {
     background: #7e2832;
 }
 
+#class55 {
+    color: white;
+    background: #7e2832;
+}
+
 #class65 {
     color: white;
     background: #007d7d;
-}    
+}
 
 #class300 {
     color: white;
     background: #0277bd;
-}    
+}
 
-#class500 {
+#class550 {
+    color: white;
+    background: #dc5e00;
+}
+
+#class1000 {
     color: white;
     background: #0277bd;
-}    
+}
 
 .color1 {
     color: white;
-    background: #7e2832;
+    background: black;
     text-shadow: 0px 0px 5px black, -2px 2px 1px silver;
 }
 
@@ -413,15 +513,21 @@ tr>td {
     color: white;
     background: #007d7d;
     text-shadow: 0px 0px 5px black, -2px 2px 1px silver;
-}    
+}
 
 .color3 {
     color: white;
     background: #0277bd;
     text-shadow: 0px 0px 5px black, -2px 2px 1px silver;
-}    
+}
 
 .color4 {
+    color: white;
+    background: #dc5e00;
+    text-shadow: 0px 0px 5px black, -2px 2px 1px silver;
+}
+
+.color5 {
     color: white;
     background: #5c0035;
     text-shadow: 0px 0px 5px black, -2px 2px 1px silver;
@@ -430,6 +536,7 @@ tr>td {
 #scheduleBtnDiv {
     width: 100%;
     height: fit-content;
+    margin-top: 10px;
 }
 
 
@@ -495,93 +602,200 @@ tr>td {
 
 @media screen and (max-width:1280px) and (max-height:800px) {
 
-    #links a {
-        font-size: 1.8vmax;
+    #links a, #links button {
+        margin: 0 34px;
+        font-size: 1.7vmax;
+    }
+
+    #logoSvg {
+        width: 1028px;
+        height: 680px;
+        font-size: 85%;
     }
 
     #title {
-        margin: 140px 5% 2vh auto;
-        width: 58%;
+        margin: 140px 2.3% 0px auto;
+        width: 73%;
     }
 
-    #carousel {
-        margin: 0 auto;
+    main {
+        height: 60vh;
+        margin: 25px auto;
     }
 
-    .type {
-        padding: 1% 0%;
-        font-size: 0.85rem;
+    #titleDiv {
+        font-size: 0.7rem;
     }
+
+    #syllabus {
+        justify-content: space-between;
+        margin: 10px 90px 10px auto;
+    }
+
+    .type p {
+        text-align: center;
+    }
+
+    #class35, #class65, #class300, #class550, #class1000 {
+        width: 16%;
+        height: 9%;
+        font-size: 2vh;
+    }
+
 }
 
 @media screen and (max-width:1280px) and (max-height:600px) {
-    #title {
-        margin: 120px 5% 2vh auto;
+    #logoSvg {
+        width: 850px;
+        height: 580px;
+        font-size: 72%;
     }
 
-    /* #offersDiv {
-        position: relative;
-        height: 63vh;
-        top: -7vh;
-    } */
+    #links a, #links button {
+        margin: 0 30px 0 0;
+    }
+
+    #title {
+        margin: 100px 2.3% 0px auto;
+        width: 73%;
+    }
+
+    #syllabus {
+        justify-content: space-between;
+        margin: 10px 5px 10px auto;
+        width: 75%;
+    }
 
     main {
-        margin: 35px auto;
+        margin: 0 auto;
     }
 
-    #speechTitle {
-        text-align: center;
-        color: cornflowerblue;
-        font-family: Abril Fatface, Arial, sans-serif;
-        font-size: 1.5rem;
-        margin: 0;
+    #titleDiv {
+        font-size: 0.6rem;
     }
 
-    .type {
-        padding: 1% 0%;
-        font-size: 0.5rem;
+    .type p {
+        font-size: .8rem;
     }
 }
 
-@media screen and (max-width:950px) and (max-height:450px) {
+@media screen and (max-width:450px) and (max-height:950px) {
+
     nav {
-        height: 12vh;
+        flex-wrap: wrap;
+        height: auto;
+        border-bottom: none;
+        position: unset;
     }
 
-    #logo {
+    #co {
+        width: 100%;
+        background: black;
+        color: teal;
+        margin: 0;
+        padding: 5px;
+        text-align: center;
+        display: block;
+    }
+
+    #logoSvg, #asteroid {
+        display: none;
+    }
+
+    #links {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        padding: 7px 5px;
+        background: black;
+        border-bottom: 2px solid #5c5a5a;
+    }
+
+    #links a, #links button {
         position: relative;
-        bottom: -24px;
-        left: 60px;
-        transform: rotate(-10deg);
         z-index: 3;
+        background: none;
+        color: #3d88eb;
+        margin: 0px;
+        border-radius: 7px;
+        font-size: 1.3vmax;
+        border: 1px solid;
+        padding: 4px;
     }
 
-    #logo h1 {
-        width: 225px;
+    #links a:hover, #links button:hover {
+        filter: unset;
     }
 
     #title {
-        margin: 75px 2% 2vh auto;
-        border-radius: 12px;
+        display: none;
     }
 
     main {
-        margin: 20px auto;
-        width: 97%;
+        margin: 0px auto;
+        width: 100%;
+        flex-direction: column;
     }
 
+    #typeDiv {
+        width: 90%;
+        margin: 10px auto;
+        order: 2;
+    }
+
+    #carousel {
+        width: 90%;
+        margin: 10px auto;
+        order: 3;
+    }
+
+    #offersDiv {
+        width: 90%;
+        margin: 10px auto;
+        order: 1;
+        border-radius: 8px;
+        border: 2px solid silver;
+        height: 100vh;
+    }
+
+    #class35, 
+    #class65, 
+    #class300, 
+    #class550, 
+    #class1000 {
+        font-size: 1rem;
+        width: 15%;
+        height: 25px;
+        border-radius: 5px;
+        margin: 10px auto 0 auto;
+    }
+
+    #scheduleBtnDiv {
+        margin-top: 0;
+    }
+    
+    #scheduleBtn {
+        border-radius: 8px;
+        width: fit-content;
+        margin: 0 auto 10px;
+        padding: 10px;
+        font-size: 1.2rem;
+    }
+    
     #logoCir {
         position: absolute;
         bottom: -83px;
         left: 20px;
     }
-
+    
     .logo {
         left: -26px;
     }
-
+    
     #offersDiv hr {
-        height: 1px;
+        height: 2px;
+        border: none;
+        margin: 20px auto;
     }
 
     tr>td {
