--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,7 @@ nav {
     justify-content: space-around;
     width: 95%;
     max-width: 2000px;
-    border-radius: 25px;
+    border-radius: 5px;
     border: 1px solid teal;
     background: linear-gradient(215deg, black 48%, teal 60%);
 }
@@ -247,21 +247,22 @@ nav {
 
 #syllabus {
     display: flex;
-    justify-content: center;
-    width: 90%;
-    max-width: 800px;
-    margin: 0 auto;
+    justify-content: space-between;
+    width: 65%;
+    /* max-width: 800px; */
+    margin: 10px auto;
     padding: 10px;
     color: black;
     border-radius: 8px;
     transform: scaleY(0%);
     transform-origin: top;
     transition: transform 1s;
+    /* border: 2px solid red; */
 }
 
 #syllabus div {
     border: 5px solid teal;
-    border-radius: 40px;
+    border-radius: 5px;
     padding: 0 25px;
     background: black;
     margin: 0 20px;
@@ -277,7 +278,7 @@ main {
     max-width: 2000px;
     position: relative;
     z-index: 2;
-    margin: 35px auto;
+    margin: 0 auto;
     overflow: auto;
     height: 55vh;
 }
@@ -290,8 +291,8 @@ main::-webkit-scrollbar {
     overflow: hidden;
     background: black;
     border: 1px solid teal;
-    border-radius: 25px;
-    width: 40%;
+    border-radius: 5px;
+    width: 45%;
 }
 
 #carousel img {
@@ -305,7 +306,7 @@ main::-webkit-scrollbar {
     position: relative;
     color: white;
     border: 1px solid teal;
-    border-radius: 25px;
+    border-radius: 5px;
     font-family: Arial, Helvetica, sans-serif;
     background: black;
     width: 20%;
@@ -386,9 +387,9 @@ main::-webkit-scrollbar {
 
 #offersDiv {
     text-align: center;
-    width: 30%;
+    width: 25%;
     padding: 2%;
-    border-radius: 10px;
+    border-radius: 5px;
     background: black;
     color: white;
     border: 1px solid teal;
@@ -527,7 +528,7 @@ tr>td {
 .color1 {
     color: white;
     background: black;
-    text-shadow: 0px 0px 5px black, -2px 2px 1px silver;
+    text-shadow: 0px 0px 5px black, -1px -1px 1px silver;
 }
 
 .color2 {
@@ -1183,7 +1184,7 @@ tr>td {
 
     #title {
         margin: 180px auto 0 auto;
-        border-radius: 10px;
+        border-radius: 5px;
     }
 
 
@@ -1202,31 +1203,51 @@ tr>td {
         order: 3;
         width: 100%;
         height: 22vh;
-        border-radius: 10px;
-    }
-
-    #carousel {
-        order: 2;
-        height: 39vh;
-        width: 55%;
-        border-radius: 10px;
-    }
-
-    #offersDiv {
-        order: 1;
-        width: 38%;
-        height: 35vh;
-    }
-
-    #class35, #class65, #class300, #class550, #class1000 {
-        font-size: 2vh;
-        font-weight: 600;
+        border-radius: 5px;
     }
 
     #speechTitle {
         font-size: 1.8rem;
     }
 
+    #carousel {
+        order: 2;
+        height: 39vh;
+        width: 55%;
+        border-radius: 5px;
+    }
+
+    #offersDiv {
+        order: 1;
+        width: 38%;
+        height: 37vh;
+        align-content: flex-start;
+    }
+
+    #class35, #class65, #class300, #class550, #class1000 {
+        font-size: 100%;
+        font-weight: 600;
+        height: fit-content;
+        padding: 5px;
+        margin: 0 7px;
+    }
+
+    tr>th {
+        line-height: 20px;
+    }
+
+    #offersDiv hr {
+        height: 0;
+        margin-top: 15px;
+    }
+
+    .modal-content {
+        width: 102%;
+    }
+
+    .close:hover {
+        color: silver;
+    }
 }
 
 @media screen and (max-width:950px) and (max-height:1400px) {
@@ -1561,8 +1582,9 @@ tr>td {
 
     tr>th {
         font-size: 70%;
+        line-height: 13.5px;
     }
-
+    
     tr>td {
         width: 10%;
     }
@@ -1844,6 +1866,7 @@ tr>td {
 
     tr th {
         font-size: 75%;
+        line-height: 10px;
     }
 
     tr td {
@@ -2922,13 +2945,16 @@ tr>td {
         padding-bottom: 25px;
     }
 
+    #scheduleBtnDiv {
+        margin-top: 2px;
+    }
+
     #scheduleBtn {
         width: 90%;
         font-size: 70%;
         padding-top: 0px;
         border-radius: 3px;
         box-shadow: -1px -1px 1px silver;
-        margin-top: 5px;
     }
 }
 
