--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,27 +594,28 @@ tr>td {
 }
 
 .modal-content {
-    position: relative;
-    background-color: rgba(0, 0, 0, 0);
-    padding: 0;
-    margin: 5% auto;
-    width: 1100px;
+    width: 50%;
+    padding: 50px 75px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.615);
+}
+
+.modal-content::-webkit-scrollbar {
+    display: none;
 }
 
 .close {
     position: absolute;
-    color: #aaa;
-    font-size: 60px;
-    font-weight: bold;
-    width: fit-content;
-    top: -20px;
-    right: 20px;
-    z-index: 2;
+    right: 22px;
+    top: -10px;
+    color: silver;
+    font-size: 4rem;
+    font-weight: 900;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
+    color: red;
     text-decoration: none;
     cursor: pointer;
 }
@@ -932,6 +933,10 @@ tr>td {
         font-size: 140%;
     }
 
+    .modal-content {
+        margin-top: 5vh;
+    }
+
 }
 
 @media screen and (max-width:1280px) and (max-height:600px) {
@@ -989,7 +994,7 @@ tr>td {
         top: 15px;
         left: -105px;
     }
-    
+
     #ship {
         z-index: 3;
         top: -40px;
@@ -1071,6 +1076,10 @@ tr>td {
         border-radius: 3px;
         box-shadow: -2px -2px 1px silver;
     }
+
+    .modal-content {
+        margin-top: 5vh;
+    }
 }
 
 @media screen and (max-width:1050px) and (max-height:800px) {
@@ -1143,7 +1152,6 @@ tr>td {
     }
 
     .modal-content {
-        width: 100%;
     }
 }
 
@@ -1203,6 +1211,10 @@ tr>td {
 
     #scheduleBtn {
         font-size: 100%;
+    }
+
+    .modal-content {
+        width: 50%;
     }
 }
 
@@ -1288,12 +1300,14 @@ tr>td {
     }
 
     .modal-content {
-        width: 102%;
+        width: 100%;
     }
 
-    .close:hover {
-        color: silver;
+    .close {
+        right: 150px;
+        top: 0px;
     }
+
 }
 
 @media screen and (max-width:950px) and (max-height:1400px) {
@@ -1494,11 +1508,10 @@ tr>td {
     }
 
     .modal-content {
-        width: 930px;
     }
 
     .close {
-        right: 70px;
+        right: 20px;
     }
 
 }
@@ -1661,11 +1674,14 @@ tr>td {
 
     .modal-content {
         width: 50%;
+        margin-top: 5vh;
     }
 
     .close {
-        right: -60px;
-        top: -50px;
+        right: 20px;
+        top: -10px;
+        /* text-shadow: 0 0 5px black; */
+        /* font-size: 4rem; */
     }
 }
 
@@ -1947,6 +1963,14 @@ tr>td {
         border-radius: 3px;
     }
 
+    .modal-content {
+        margin-top: 5vh;
+    }
+
+    .close {
+        right: 20px;
+    }
+
 }
 
 @media screen and (max-width:900px) and (max-height:400px) {
@@ -1957,7 +1981,7 @@ tr>td {
         width: 320px;
         height: 140px;
     }
-    
+
     #ship {
         top: -52px;
         left: 30px;
@@ -2005,11 +2029,11 @@ tr>td {
 
     .modal-content {
         width: 50%;
+        padding: 50px 75px;
+        border-radius: 5px;
     }
 
     .close {
-        right: -60px;
-        top: -50px;
     }
 }
 
@@ -2021,7 +2045,7 @@ tr>td {
         height: 120px;
         width: 260px;
     }
-    
+
     #ship {
         top: -40px;
         left: 45px;
@@ -2075,11 +2099,9 @@ tr>td {
     }
 
     .modal-content {
-        width: 850px;
     }
 
     .close {
-        right: 50px;
     }
 }
 
@@ -2177,13 +2199,14 @@ tr>td {
 
     .modal-content {
         width: 50%;
+        padding: 50px 75px;
+        border-radius: 5px;
     }
 
     .close {
-        right: -60px;
-        top: -50px;
+        right: 20px;
+        top: -10px;
     }
-
 }
 
 @media screen and (max-width:800px) and (max-height:1100px) {
@@ -2244,14 +2267,14 @@ tr>td {
 
     .modal-content {
         position: relative;
-        background-color: rgba(0, 0, 0, 0);
-        padding: 0;
-        width: 785px;
+        width: 60%;
+        background-color: rgba(0, 0, 0, 0.615);
+        padding: 50px 75px;
     }
 
     .close {
-        right: 60px;
-        top: -25px;
+        right: 20px;
+        top: -10px;
     }
 }
 
@@ -2381,12 +2404,15 @@ tr>td {
     }
 
     .modal-content {
-        width: 50%;
+    width: 50%;
+    padding: 50px 75px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.615);
     }
 
     .close {
-        right: -50px;
-        top: -40px;
+    right: 22px;
+    top: -10px;
     }
 
 }
@@ -2643,11 +2669,14 @@ tr>td {
 
     .modal-content {
         width: 50%;
+        padding: 50px 75px;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.615);
     }
 
     .close {
-        top: -50px;
-        right: -80px
+        right: 20px;
+        top: -10px;
     }
 }
 
@@ -2945,13 +2974,17 @@ tr>td {
     }
 
     .modal-content {
-        width: 60%;
+        width: 50%;
+        padding: 50px 75px;
+        border-radius: 5px;
+        margin-top: 5vh;
     }
 
     .close {
-        right: -70px;
-        top: -40px;
+        right: 15px;
+        top: -10px;
     }
+
 }
 
 @media screen and (max-width:700px) and (max-height:300px) {
@@ -3050,16 +3083,12 @@ tr>td {
     }
 
     .modal-content {
-        top: 20vh;
+        top: 5vh;
     }
 
     .close {
         right: -60px;
-        display: block;
-        color: gray;
-        z-index: 6;
         top: -20px;
-        text-shadow: 0 0 5px black;
     }
 }
 
@@ -3609,13 +3638,45 @@ tr>td {
     }
 
     .modal-content {
-        width: 335px;
+    .modal-content {
+    width: 50%;
+    padding: 50px 75px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.615);
+};
+    .modal-content {
+    width: 50%;
+    padding: 50px 75px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.615);
+};
+    .modal-content {
+    width: 50%;
+    padding: 50px 75px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.615);
+};
+    .modal-content {
+    width: 50%;
+    padding: 50px 75px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.615);
+};
+    .modal-content {
+    width: 50%;
+    padding: 50px 75px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.615);
+};
+    width: 50%;
+    padding: 50px 75px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.615);
     }
 
     .close {
-        left: auto;
-        top: -40px;
-        right: -70px;
+    right: 20px;
+    top: -20px;
     }
 }
 
@@ -3780,14 +3841,15 @@ tr>td {
     }
 
     .modal-content {
-        width: 380px;
-        margin-top: 100px;
+        width: 100%;
+        margin-top: 13vh;
+        padding: 10vh 5px;
+        background-color: rgba(0, 0, 0, 0.615);
     }
 
     .close {
-        right: 40px;
-        top: -85px;
-        left: auto;
+        right: 10px;
+        top: 5px;
     }
 
 }
@@ -3906,6 +3968,10 @@ tr>td {
         text-align: center;
         font-size: .8rem;
     }
+
+    .close {
+        top: -5px;
+    }
 }
 
 @media screen and (max-width:300px) and (max-height:700px) {
@@ -3969,8 +4035,18 @@ tr>td {
 
     .close {
         display: block;
-        left: 10px;
-        top: 0px;
+        right: 0px;
+        left: 0px;
+        top: 10px;
+        margin: 0 auto;
+        border: 2px solid silver;
+        width: 30px;
+        border-radius: 0 0 50% 50%;
+        height: 30px;
+        line-height: 0.9;
+        text-align: center;
+        font-size: 2rem;
+        color: red;
     }
 
 }
