--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2975,14 +2975,14 @@ tr>td {
 
     .modal-content {
         width: 50%;
-        padding: 50px 75px;
+        padding: 25%;
         border-radius: 5px;
-        margin-top: 5vh;
+        margin-top: -15%;
     }
 
     .close {
-        right: 15px;
-        top: -10px;
+        right: 15%;
+        top: 15%;
     }
 
 }
@@ -3842,8 +3842,8 @@ tr>td {
 
     .modal-content {
         width: 100%;
-        margin-top: 13vh;
-        padding: 10vh 5px;
+        margin-top: -55vh;
+        padding: 75vh 5px;
         background-color: rgba(0, 0, 0, 0.615);
     }
 
@@ -3970,7 +3970,7 @@ tr>td {
     }
 
     .close {
-        top: -5px;
+        top: 60vh;
     }
 }
 
