--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -595,7 +595,7 @@ tr>td {
 
 .modal-content {
     width: 50%;
-    padding: 50px 75px;
+    /* padding: 50px 75px; */
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.615);
 }
@@ -934,7 +934,6 @@ tr>td {
     }
 
     .modal-content {
-        margin-top: 5vh;
     }
 
 }
@@ -1078,8 +1077,20 @@ tr>td {
     }
 
     .modal-content {
-        margin-top: 5vh;
+    height: 100vh;
+    width: 85%;
+    padding: 5vh 7.5%;
     }
+
+    .close {
+        position: absolute;
+        right: 10%;
+        top: 2vh;
+        color: silver;
+        font-size: 4rem;
+        font-weight: 900;
+    }
+    
 }
 
 @media screen and (max-width:1050px) and (max-height:800px) {
@@ -1152,7 +1163,15 @@ tr>td {
     }
 
     .modal-content {
+    height: 100vh;
+    width: 60%;
+    padding: 10vh 20%;
+    margin: 0;
     }
+
+    .calendly-inline-widget {
+        height: 85vh !important;
+    }    
 }
 
 @media screen and (max-width:1050px) and (max-height:600px) {
@@ -1300,7 +1319,6 @@ tr>td {
     }
 
     .modal-content {
-        margin-top: 5vh;
     }
 
     .close {
@@ -1673,15 +1691,17 @@ tr>td {
     }
 
     .modal-content {
-        width: 50%;
-        margin-top: 5vh;
+        width: 70%;
+        padding: 10vh 15%;
     }
 
     .close {
         right: 20px;
         top: -10px;
-        /* text-shadow: 0 0 5px black; */
-        /* font-size: 4rem; */
+    }
+
+    .calendly-inline-widget{
+        height: 80vh !important;;
     }
 }
 
@@ -1964,13 +1984,20 @@ tr>td {
     }
 
     .modal-content {
-        margin-top: 5vh;
+        height: 100vh;
+        width: 60%;
+        padding: 5% 20%;
+        margin: 0;
     }
 
     .close {
         right: 20px;
     }
 
+    .calendly-inline-widget{
+        height: 80vh !important;;
+    }
+    
 }
 
 @media screen and (max-width:900px) and (max-height:400px) {
@@ -2028,8 +2055,8 @@ tr>td {
     }
 
     .modal-content {
-        width: 50%;
-        padding: 50px 75px;
+        width: 70%;
+        padding: 15vh 15%;
         border-radius: 5px;
     }
 
@@ -2037,7 +2064,7 @@ tr>td {
     }
 }
 
-@media screen and (max-width:850px) and (max-height:1200px) {
+@media screen and (max-width: 850px) and (max-height: 1200px) {
 
     #logoSvg {
         top: 1px;
@@ -2099,9 +2126,19 @@ tr>td {
     }
 
     .modal-content {
+    height: 100vh;
+    width: 70%;
+    padding: 7vh 15%;
+    margin-top: 0;
     }
 
     .close {
+    top: 1vh;
+    right: 7%;
+    }
+
+    .calendly-inline-widget{
+        height: 90vh !important;
     }
 }
 
@@ -2198,8 +2235,8 @@ tr>td {
     }
 
     .modal-content {
-        width: 50%;
-        padding: 50px 75px;
+        width: 70%;
+        padding: 15vh 15%;
         border-radius: 5px;
     }
 
@@ -2207,6 +2244,11 @@ tr>td {
         right: 20px;
         top: -10px;
     }
+
+    .calendly-inline-widget {
+        height: 80vh !important;
+    }
+
 }
 
 @media screen and (max-width:800px) and (max-height:1100px) {
@@ -2266,16 +2308,17 @@ tr>td {
     }
 
     .modal-content {
-        position: relative;
-        width: 60%;
-        background-color: rgba(0, 0, 0, 0.615);
-        padding: 50px 75px;
+        /* position: relative; */
+        width: 70%;
+        padding: 10vh 15%;
+        margin: 0;
     }
 
     .close {
-        right: 20px;
-        top: -10px;
+        right: 7%;
+        top: 3vh;
     }
+
 }
 
 @media screen and (max-width:750px) and (max-height:550px) {
@@ -2668,8 +2711,8 @@ tr>td {
     }
 
     .modal-content {
-        width: 50%;
-        padding: 50px 75px;
+        width: 80%;
+        padding: 15vh 10%;
         border-radius: 5px;
         background-color: rgba(0, 0, 0, 0.615);
     }
@@ -3669,7 +3712,6 @@ tr>td {
     background-color: rgba(0, 0, 0, 0.615);
 };
     width: 50%;
-    padding: 50px 75px;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.615);
     }
@@ -3842,14 +3884,14 @@ tr>td {
 
     .modal-content {
         width: 100%;
-        margin-top: -55vh;
-        padding: 75vh 5px;
+        height: 100vh;
         background-color: rgba(0, 0, 0, 0.615);
+        padding-top: 20vh;
     }
 
     .close {
         right: 10px;
-        top: 5px;
+        top: 10vh;
     }
 
 }
@@ -3970,7 +4012,11 @@ tr>td {
     }
 
     .close {
-        top: 60vh;
+        top: 10vh;
+    }
+
+    .calendly-inline-widget.calendly-mobile {
+        height: 80vh !important;
     }
 }
 
