--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,10 +594,11 @@ tr>td {
 }
 
 .modal-content {
-    width: 50%;
-    /* padding: 50px 75px; */
+    width: 70%;
+    padding: 15vh 15%;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.615);
+    margin: 0;
 }
 
 .modal-content::-webkit-scrollbar {
@@ -606,8 +607,8 @@ tr>td {
 
 .close {
     position: absolute;
-    right: 22px;
-    top: -10px;
+    right: 20%;
+    top: 10%;
     color: silver;
     font-size: 4rem;
     font-weight: 900;
@@ -709,6 +710,19 @@ tr>td {
         font-size: 150%;
         border-radius: 5px;
         box-shadow: -2px -2px 1px silver;
+    }
+
+    .modal-content {
+        width: 90%;
+        padding: 15vh 5%;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.615);
+        margin: 0;
+    }
+
+    .close {
+        right: 10%;
+        top: 10%;
     }
 }
 
@@ -1079,12 +1093,12 @@ tr>td {
     .modal-content {
     height: 100vh;
     width: 85%;
-    padding: 5vh 7.5%;
+    padding: 10vh 7.5%;
     }
 
     .close {
         position: absolute;
-        right: 10%;
+        right: 6.4%;
         top: 2vh;
         color: silver;
         font-size: 4rem;
@@ -1319,11 +1333,13 @@ tr>td {
     }
 
     .modal-content {
+    width: 60%;
+    padding: 15vh 20%;
     }
 
     .close {
-        right: 20px;
-        top: -10px;
+        right: 10%;
+        top: 5vh;
     }
 
 }
@@ -1525,13 +1541,14 @@ tr>td {
         border-radius: 5px;
     }
 
-    .modal-content {
-    }
-
     .close {
-        right: 20px;
+        right: 7%;
+        top: 7vh;
     }
 
+    .calendly-inline-widget {
+        height: 80vh !important;
+    }
 }
 
 @media screen and (max-width:950px) and (max-height:450px) {
@@ -2128,13 +2145,13 @@ tr>td {
     .modal-content {
     height: 100vh;
     width: 70%;
-    padding: 7vh 15%;
+    padding: 15vh 15%;
     margin-top: 0;
     }
 
     .close {
-    top: 1vh;
-    right: 7%;
+    top: 5vh;
+    right: 10%;
     }
 
     .calendly-inline-widget{
@@ -3017,15 +3034,15 @@ tr>td {
     }
 
     .modal-content {
-        width: 50%;
-        padding: 25%;
+        width: 70%;
+        padding: 15vh 15%;
         border-radius: 5px;
-        margin-top: -15%;
+        margin-top: 0;
     }
 
     .close {
-        right: 15%;
-        top: 15%;
+        right: 5%;
+        top: 0vh;
     }
 
 }
@@ -3711,14 +3728,19 @@ tr>td {
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.615);
 };
-    width: 50%;
+    width: 80%;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.615);
+    padding: 12vh 10%;
     }
 
     .close {
-    right: 20px;
-    top: -20px;
+    right: 5%;
+    top: 1vh;
+    }
+
+    .calendly-inline-widget {
+        height: 85vh !important;
     }
 }
 
@@ -3883,17 +3905,21 @@ tr>td {
     }
 
     .modal-content {
-        width: 100%;
+        width: 95%;
         height: 100vh;
         background-color: rgba(0, 0, 0, 0.615);
-        padding-top: 20vh;
+        padding: 10vh 35% 10vh 5%;
+        margin: 0;
     }
 
     .close {
-        right: 10px;
-        top: 10vh;
+        right: 28%;
+        top: 1vh;
     }
 
+    .calendly-inline-widget {
+        height: 85vh !important;
+    }
 }
 
 @media screen and (max-width:400px) and (max-height:900px) {
@@ -4011,8 +4037,16 @@ tr>td {
         font-size: .8rem;
     }
 
+    .modal-content {
+        width: 65%;
+        height: 100vh;
+        padding: 15vh 30% 10vh 5%;
+        margin: 0;
+    }
+
     .close {
-        top: 10vh;
+        top: 2vh;
+        right: 5%;
     }
 
     .calendly-inline-widget.calendly-mobile {
