--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3197,246 +3197,86 @@ width: 25%;
     }
 }
 
+/* Half Surface */
 @media screen and (max-width:650px) and (max-height:700px) {
 
     #logoSvg {
-        top: -16px;
-        left: -30px;
-        width: 840px;
-        height: 630px;
-        font-size: 85%;
+        left: -55px;
+        top: 5px;
+        height: 85px;
+        width: 240px;
     }
-
+    
     #ship {
-        width: 850px;
-        height: 550px;
-        top: -100px;
-        font-size: 70%;
-        left: 20px;
-    }
-
-    #speed1 {
-        top: -21px;
-        left: 17px;
-    }
-
-    #speed2 {
-        top: 60px;
-        left: -40px;
-    }
-
-    #speed3 {
-        top: -67px;
-        left: 115px;
-    }
-
-    @keyframes asteroid {
-        0% {
-            opacity: 1;
-            left: 250px;
-            top: 5px;
-            z-index: 3;
-            width: 50px;
-        }
-
-        11% {
-            opacity: 1;
-            left: -230px;
-            top: 130px;
-            z-index: 3;
-            width: 50px;
-        }
-
-        12% {
-            opacity: 0;
-            left: -230px;
-            z-index: 3;
-            top: 130px;
-            width: 50px;
-        }
-
-        20% {
-            opacity: 0;
-            top: -150px;
-            left: 250px;
-        }
-
-        20.9% {
-            opacity: 1;
-            top: -150px;
-            left: 250px;
-            z-index: 3;
-            width: 100px;
-        }
-
-        31% {
-            opacity: 1;
-            left: -230px;
-            top: 100px;
-            z-index: 3;
-            width: 100px;
-        }
-
-        32% {
-            opacity: 0;
-            left: -230px;
-            top: 100px;
-            z-index: 3;
-            width: 100px;
-        }
-
-        40% {
-            opacity: 0;
-            left: 320px;
-            top: -10px;
-            width: 25px;
-        }
-
-        40.1% {
-            opacity: 1;
-            left: 320px;
-            top: -10px;
-            width: 25px;
-        }
-
-        50% {
-            opacity: 1;
-            left: -250px;
-            top: 200px;
-            width: 25px;
-        }
-
-        50.1% {
-            opacity: 0;
-            left: -250px;
-            top: 200px;
-            width: 25px;
-        }
-
-        51% {
-            opacity: 0;
-            left: 250px;
-            top: -50px;
-            z-index: 2;
-            width: 25px;
-        }
-
-        51.1% {
-            opacity: 1;
-            left: 250px;
-            top: -50px;
-            z-index: 2;
-            width: 25px;
-        }
-
-        100% {
-            opacity: 1;
-            left: -250px;
-            top: 130px;
-            z-index: 2;
-            width: 25px;
-        }
-
-
-    }
-
-    #links a, #links button {
-        margin: 0px 7px 0 0;
-        font-size: 1.75vmax;
-        border-bottom: 3px solid #7d2626;
+        /* display: none; */
+        height: 115px;
+        width: 230px;
+        font-size: 60%;
+        left: 53px;
+        top: -26px;
     }
 
     #title {
-        margin: 120px auto 0 auto;
-        width: 95%;
+        width: 67%;
+        border-radius: 3px;
+        margin: 25px 15px 0 auto;
     }
 
     #syllabus {
-        justify-content: space-between;
-        margin: 5px auto;
+        margin: 5px 15px 5px auto;
+        width: 65%;
+        font-size: 70%;
     }
 
     main {
-        margin: 0px auto;
-    }
-
-    #offersDiv {
-        height: 35vh;
-    }
-
-    #offersDiv hr {
-        height: 0px;
-        margin: 5px 0;
-    }
-
-    #class35, #class65, #class300, #class550, #class1000 {
-        box-shadow: -2px -2px 1px silver;
-        font-size: 65%;
-        font-weight: 600;
-        height: 6%;
-        border-radius: 3px;
-        margin-bottom: 2px;
-    }
-
-    table {
-        margin: -5px 0;
-    }
-
-    tr>th {
-        width: 25%;
-        font-size: 81%;
-    }
-
-    tr>td {
-        width: 18%;
-        font-size: 5%;
-        white-space: normal;
-    }
-
-    /* input[type="radio"] {
-        width: 30%;
-    } */
-
-    #scheduleBtn {
-        border-radius: 3px;
-        box-shadow: -2px -2px 1px silver;
-        font-size: 1.8vmax;
+        height: auto;
     }
 
     #carousel {
-        height: 39vh;
+        margin-bottom: 30px;
+    }
+
+    #class35, #class65, #class300, #class550, #class1000 {
+        margin: unset;
+        border-radius: 3px;
+        font-size: 60%;
+    }
+
+    tr>th {
+        line-height: 5px;
+    }
+
+    #scheduleBtn {
+        font-size: 70%;
+    }
+
+    input[type="radio"] {
+        height: 1.2vh;
+        width: 30%;
     }
 
     #typeDiv {
-        margin-top: 20px;
+        height: 26vh;
+        border-radius: 3px;
     }
 
     #speechTitle {
-        font-size: 1.5rem;
-        margin: -2px auto 2px;
+        font-size: 100%;
     }
 
-    .type {
-        font-size: 0.7rem;
+    .type p {
+        font-size: 80%;
     }
 
     #switchBtn {
-        bottom: 14px;
-        height: 30px;
+        height: 24px;
+        bottom: 7px;
+    }
+    
+    #switchBtn button {
+        font-size: 100%;
     }
 
-    .modal-content {
-        width: 420px;
-    }
-
-    .close {
-        right: -60px;
-        top: -25px;
-    }
-
-    .close:hover {
-        color: red;
-    }
 }
 
 /* Surface Duo */
