--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -597,8 +597,8 @@ width: 25%;
 
 .modal-content {
     position: absolute;
-    width: 70%;
-    padding: 15vh 15%;
+    width: 100%;
+    padding: 10vh;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.615);
     margin: 0;
@@ -611,7 +611,7 @@ width: 25%;
 .close {
     position: absolute;
     right: 20%;
-    top: 10%;
+    top: 5%;
     color: silver;
     font-size: 4rem;
     font-weight: 900;
@@ -622,6 +622,41 @@ width: 25%;
     color: red;
     text-decoration: none;
     cursor: pointer;
+}
+
+@media screen and (max-width:1550px) and (max-height:8000px) {
+
+    #logoSvg {
+        top: -7px;
+    }
+
+    #ship {
+        top: -55px;
+    }
+    
+    #speechTitle {
+        font-size: 150%;
+    }
+    
+    .type p {
+        font-size: 100%;
+    }
+
+    .type button {
+        font-size: 100%;
+    }
+
+    #offersDiv {
+        align-content: stretch;
+    }
+
+    tr>th {
+        font-size: 100%;
+    }
+
+    #scheduleBtnDiv {
+        font-size: 70%;
+    }
 }
 
 /* Surface Pro 7 */
