--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -763,6 +763,12 @@ width: 25%;
     }
 }
 
+@media screen and (max-width:1250px) and (max-height:8050px) {
+    tr>th {
+        font-size: 100%;
+    }
+}
+
 /* Nest Hub Max */
 @media screen and (max-width:1280px) and (max-height:800px) {
 
