--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1320,8 +1320,10 @@ width: 25%;
     }
 
     #logoSvg {
-        left: -150px;
-        top: 5px;
+        left: -105px;
+        top: 0px;
+        height: 160px;
+        width: 340px;
     }
 
     #ship {
