--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1047,6 +1047,13 @@ width: 25%;
     }
 }
 
+@media screen and (max-width:1100px) and (max-height:900px) {
+    #links a, #links button {
+        font-size: 120%;
+        margin: 0 25px 0 0;
+    }
+}
+
 /* iPad Air */
 @media screen and (max-width:1200px) and (max-height:850px) {
 
