--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,7 +624,7 @@ width: 25%;
     cursor: pointer;
 }
 
-@media screen and (max-width:1550px) and (max-height:8000px) {
+@media screen and (max-width:1550px) and (max-height:800px) {
 
     #logoSvg {
         top: -7px;
@@ -763,9 +763,15 @@ width: 25%;
     }
 }
 
-@media screen and (max-width:1250px) and (max-height:8050px) {
+@media screen and (max-width:1250px) and (max-height:850px) {
     tr>th {
         font-size: 100%;
+    }
+
+    #scheduleBtn {
+        font-size: 130%;
+        border-radius: 5px;
+        box-shadow: -2px -2px 1px silver;
     }
 }
 
@@ -1038,6 +1044,16 @@ width: 25%;
     #links a, #links button {
         font-size: 120%;
         margin: 0 25px 0 0;
+    }
+
+    #scheduleBtn {
+        font-size: 120%;
+        border-radius: 5px;
+        box-shadow: -2px -2px 1px silver;
+    }
+
+    tr>th {
+        font-size: 90%;
     }
 }
 
