--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,9 @@ nav {
 
 #links {
     z-index: 4;
+    width: 70%;
+    display: flex;
+    justify-content: end;
 }
 
 #links a, #links button {
@@ -560,7 +563,7 @@ input[type="radio"] {
 .color2 {
     color: white;
     background: #007d7d;
-    text-shadow: 0px 0px 5px black, -2px 2px 1px silver;
+    text-shadow: 0px 0px 5px black, 0px 2px 1px silver;
 }
 
 .color3 {
@@ -1103,7 +1106,7 @@ input[type="radio"] {
     }
 
     #links a, #links button {
-        font-size: 125%;
+        font-size: 90%;
     }
 
     #syllabus {
@@ -1150,10 +1153,11 @@ input[type="radio"] {
     }
 
     #class35, #class65, #class300, #class550, #class1000 {
-        font-size: 70%;
+        font-size: 60%;
         border-radius: 5px;
         height: 30px;
         font-weight: 600;
+        padding-left: 3px;
     }
 
     tr>th {
@@ -1175,8 +1179,9 @@ input[type="radio"] {
         font-size: 110%;
         border-radius: 3px;
         box-shadow: -2px -2px 1px silver;
+        height: 2rem;
     }
-
+    
     .modal-content {
         height: 100vh;
         width: 85%;
